<resources>
    <string name="app_name">交易客户端</string>
    <string name="action_settings">Settings</string>
    <string name="login_usr_id_text">账号：</string>
    <string name="login_usr_password_text">密码：</string>
    <string name="login_usr_remember_text">记住账号</string>
    <string name="login_login_button">登录</string>
    <string name="main_quotation_text">行情</string>
    <string name="main_trade_text">买卖</string>
    <string name="main_holding_text">持仓</string>
    <string name="main_announce_text">公告</string>
    <string name="holding_commodityname_text">商品名称</string>
    <string name="holding_tradename_text">买卖方向</string>
    <string name="holding_holdquantity_text">持仓量</string>
    <string name="holding_holdprice_text">持仓价</string>
</resources>
