<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/holding_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/holding_commodityname_text"
            android:gravity="center" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/holding_tradename_text"
            android:gravity="center" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/holding_holdquantity_text"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/holding_holdprice_text"
            android:gravity="center" />
    </LinearLayout>

    <ListView
        android:id="@+id/holding_listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

    </ListView>
</LinearLayout>
